--- a/sass/config/_inc/_text-sizes.scss
+++ b/sass/config/_inc/_text-sizes.scss
@@ -23,7 +23,7 @@ $text-sizing: (
   ),
   base: (
     device-small: (
-      font-size: rem(16px)
+      font-size: rem(14px)
     ),
     device-medium: (
       font-size: rem(16px)
@@ -32,9 +32,20 @@ $text-sizing: (
       font-size: rem(16px)
     )
   ),
+  medium: (
+    device-small: (
+      font-size: rem(16px)
+    ),
+    device-medium: (
+      font-size: rem(18px)
+    ), 
+    device-large: (
+      font-size: rem(18px)
+    )
+  ),
   medium-large: (
     device-small: (
-      font-size: rem(24px)
+      font-size: rem(18px)
     ),
     device-medium: (
       font-size: rem(24px)
