--- a/clickmechanic/clickmechanic.css
+++ b/clickmechanic/clickmechanic.css
@@ -2298,24 +2298,26 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-size: 0.875rem;
-  line-height: 1.8;
-  margin-bottom: 1rem; }
+  line-height: 1.8; }
   @media screen and (min-width: 720px) {
     p {
       font-size: 1rem; } }
   @media screen and (min-width: 960px) {
     p {
       font-size: 1rem; } }
+  p:not(:last-child) {
+    margin-bottom: 1rem; }
   p.lead {
     font-size: 1.5rem; }
-  p.caption {
-    font-size: 0.875rem; }
-    @media screen and (min-width: 720px) {
-      p.caption {
-        font-size: 0.875rem; } }
-    @media screen and (min-width: 960px) {
-      p.caption {
-        font-size: 0.875rem; } }
+
+small {
+  font-size: 0.875rem; }
+  @media screen and (min-width: 720px) {
+    small {
+      font-size: 0.75rem; } }
+  @media screen and (min-width: 960px) {
+    small {
+      font-size: 0.75rem; } }
 
 .no-bullet {
   list-style-type: none;
@@ -2367,10 +2369,10 @@ h3, .h3 {
   font-size: 1.125rem; }
   @media screen and (min-width: 720px) {
     h3, .h3 {
-      font-size: 1.5rem; } }
+      font-size: 1.25rem; } }
   @media screen and (min-width: 960px) {
     h3, .h3 {
-      font-size: 1.5rem; } }
+      font-size: 1.25rem; } }
 
 h4, .h4 {
   font-size: 1rem; }
@@ -2425,10 +2427,12 @@ h6, .h6 {
   .legal a {
     color: #009DFF; }
 
+table {
+  margin-bottom: 2rem; }
+
 .section {
   background: white;
   width: 100%;
-  margin-bottom: 2rem;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
@@ -2437,8 +2441,10 @@ h6, .h6 {
   -webkit-box-shadow: 0px 3px 0px #e6e6e6;
   -moz-box-shadow: 0px 3px 0px #e6e6e6;
   box-shadow: 0px 3px 0px #e6e6e6; }
-  .section td {
-    padding: 20px; }
+  .section > tbody > tr > td {
+    padding: 1rem; }
+    .section > tbody > tr > td td {
+      padding: 1rem 0; }
   .section .section-header {
     border-bottom: 1px solid #EDEDED; }
     .section .section-header h3 {
@@ -2455,6 +2461,7 @@ h6, .h6 {
   background-size: 100%;
   background-position: center center;
   background-repeat: no-repeat;
+  display: inline-block;
   background-image: url("../clickmechanic/images/logo.png");
   width: 200px;
   height: 50px; }
