--- a/clickmechanic/views/emails.html
+++ b/clickmechanic/views/emails.html
@@ -1,135 +1,153 @@
 @@include('_header.html')
 <body class="page-emails">
-	<div class="email">
-		<table>
-			<tr>
-				<td>
-					<div class="logo"></div>
-					<p>Hi Andy, </p>
+	<table class="email">
+		<!-- Summary !-->
+		<tr>
+			<td>
+				<table>
+					<tr class="text-center">
+						<td><div class="logo"></div></td>
+					</tr>
+					<tr>
+						<td>
+							<p>Hi Andy, </p>
+							<p>Thank you for requesting a booking using ClickMechanic! We are now arranging for a mobile mechanic at the specified time. You will receive a confirmation email with the mechanic's name once it has been scheduled. In the rare instance that none of our mechanics are available at your chosen time, we'll contact you immediately to find an alternative that works for you.</p>
+							<p>Thanks, </br>
+							The ClickMechanic Team</p>
+						</td>
+					</tr>
+				</table>
+				<!-- / Summary !-->
 
-					<p>Thank you for requesting a booking using ClickMechanic! We are now arranging for a mobile mechanic at the specified time. You will receive a confirmation email with the mechanic's name once it has been scheduled. In the rare instance that none of our mechanics are available at your chosen time, we'll contact you immediately to find an alternative that works for you.</p>
-					<p>Thanks, </br>
-					The ClickMechanic Team</p>
-				</td>
-			</tr>
-		</table>
+				<!-- Booking Info !-->
+				<table class="section">
+					<tr>
+						<td class="section-header"><h3 class="h4">Your Booking Info</h3></td>
+					</tr>
+					<tr>
+						<td>
+							<table>
+								<tr>
+									<td>
+										<h4>Booking Reference</h4>
+										<p class="no-margin">#676E567</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<h4>Repair Address</h4>
+										<p class="no-margin">Flat 9</br>
+										51 Marlborough Court</br>
+										London</br>
+										E3 2UH</p>
+									</td>
+									<td>
+										<h4>Date &amp; Time</h4>
+										<p class="no-margin">Monday 10th of October</p>
+										<p>9 - 5pm</p>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+				<!-- / Booking Info !-->
 
-		<table class="section">
-			<tr>
-				<td class="section-header"><h3>Your Booking Info</h3></td>
-			</tr>
-			<tr>
-				<td>
-					<table>
-						<tr>
-							<td>Booking Reference</td>
-							<td>dfgsdfgsg</td>
-						</tr>
-						<tr>
-							<td>
-								<h4>Repair Address</h4>
-								<p>Flat 9</br>
-								51 Marlborough Court</br>
-								London</br>
-								E3 2UH</p>
-							</td>
-							<td>
-								<h4>Date &amp; Time</h4>
-								<p>Monday 10th of October</p>
-								<p>9 - 5pm</p>
-							</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
-		<table class="section">
-			<tr>
-				<td class="section-header"><h3 class="h4">Your Repairs</h3></td>
-			</tr>
-			<tr>
-				<td>
-					<table>
-						<tr class="border-bottom">
-							<td>
-								<h4>Grill Replacement</h4>
-								<p>2 Hours Labour Time</p>
-								<p class="legal">Includes the following parts: Lights, Pipe, Screw. 
-							</td>
-							<td class="text-right">
-								<h5>£200</h5>
-							</td>
-						</tr>
-						<tr class="border-bottom">
-							<td>
-								<h4>Grill Replacement</h4>
-								<p>2 Hours Labour Time</p>
-								<p class="legal">Includes the following parts: Lights, Pipe, Screw. 
-							</td>
-							<td class="text-right">
-								<h5>£200</h5>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<h4>Total</h4>
-								<p class="legal">Total includes VAT and call-out. 
-							</td>
-							<td class="text-right">
-								<h4>£400</h4>
-							</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
+				<!-- Repairs !-->
+				<table class="section">
+					<tr>
+						<td class="section-header"><h3 class="h4">Your Repairs</h3></td>
+					</tr>
+					<tr>
+						<td>
+							<table>
+								<tr class="border-bottom">
+									<td>
+										<h4>Grill Replacement</h4>
+										<p>2 Hours Labour Time</p>
+										<small>Includes the following parts: Lights, Pipe, Screw.</small>
+									</td>
+									<td class="text-right">
+										<h4>£200</h4>
+									</td>
+								</tr>
+								<tr class="border-bottom">
+									<td>
+										<h4>Grill Replacement</h4>
+										<p>2 Hours Labour Time</p>
+										<small>Includes the following parts: Lights, Pipe, Screw.</small>
+									</td>
+									<td class="text-right">
+										<h4>£200</h4>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<h4>Total</h4>
+										<small>Total includes VAT and call-out.</small>
+									</td>
+									<td class="text-right">
+										<h4>£400</h4>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+				<!-- / Repairs !-->
 
-		<table class="section">
-			<tr>
-				<td class="section-header"><h3>Payment</h3></td>
-			</tr>
-			<tr>
-				<td>
-					<p>Your card details have been stored securely to enable your mechanic to collect payment when the work is complete. Please ensure that the payment is collected using this card for the strongest consumer protection.</p>
+				<!-- Payment !-->
+				<table class="section">
+					<tr>
+						<td class="section-header"><h3 class="h4">Payment</h3></td>
+					</tr>
+					<tr>
+						<td>
+							<p>Your card details have been stored securely to enable your mechanic to collect payment when the work is complete. Please ensure that the payment is collected using this card for the strongest consumer protection.</p>
 
-					<p>A payment will be authorised before your booking to ensure your card details are valid and funds are available to cover the quoted price. For further information please go to www.url.com.</p>
-				</td>
-			</tr>
-		</table>
+							<p>A payment will be authorised before your booking to ensure your card details are valid and funds are available to cover the quoted price. For further information please go to www.url.com.</p>
+						</td>
+					</tr>
+				</table>
+				<!-- / Payment !-->
 
-		<table class="section">
-			<tr>
-				<td class="section-header"><h3>Terms &amp; Conditions</h3></td>
-			</tr>
-			<tr>
-				<td>
-					<p>Read more about how ClickMechanic works, our term and conditions, and our booking policies at www.url.com. In particular please note that £20‒£40 charge may apply (at our discretion) when cancelling or rescheduling less than 24 hours before the earliest arrival time.</p>
-				</td>
-			</tr>
-		</table>
+				<!-- T & C !-->
+				<table class="section">
+					<tr>
+						<td class="section-header"><h3 class="h4">Terms &amp; Conditions</h3></td>
+					</tr>
+					<tr>
+						<td>
+							<p>Read more about how ClickMechanic works, our term and conditions, and our booking policies at www.url.com. In particular please note that £20‒£40 charge may apply (at our discretion) when cancelling or rescheduling less than 24 hours before the earliest arrival time.</p>
+						</td>
+					</tr>
+				</table>
+				<!-- / T & C !-->
 
-		<table class="section">
-			<tr>
-				<td class="section-header"><h3>Need Help?</h3></td>
-			</tr>
-			<tr>
-				<td>
-					<p>If any of these details are not as expected or to reschedule/cancel your booking, please contact us at support@clickmechanic.com.</p>
-				</td>
-			</tr>
-		</table>
+				<!-- Help !-->
+				<table class="section">
+					<tr>
+						<td class="section-header"><h3 class="h4">Need Help?</h3></td>
+					</tr>
+					<tr>
+						<td>
+							<p>If any of these details are not as expected or to reschedule/cancel your booking, please contact us at <a href="#">support@clickmechanic.com</a>.</p>
+						</td>
+					</tr>
+				</table>
+				<!-- Help !-->
 
-		<table>
-			<tr>
-				<td>
-					Copyright © 2015. ClickMechanic Limited. 
-We’re a company registered in England & Wales, company number 789789.
-				</td>
-			</tr>
-		</table>
-	</div>
-
-
-
+				<!-- Footer !-->
+				<table>
+					<tr>
+						<td class="text-center">
+							<small>Copyright © 2015. ClickMechanic Limited. </br> We’re a company registered in England &amp; Wales, company number 789789.</small>
+						</td>
+					</tr>
+				</table>
+				<!-- Footer !-->
+			</td>
+		</tr>
+	</table>
 
 
