--- a/sass/base.sass
+++ b/sass/base.sass
@@ -1,7 +1,8 @@
-@import "config/config.sass"
-@import "mixins/mixins.sass"
-@import "helpers/helpers.sass"
-@import "components/components.sass"
+@import "_default-theme"
+@import "config/config"
+@import "mixins/mixins"
+@import "helpers/helpers"
+@import "components/components"
 
 
 
