--- a/sass/components/_inc/_faq.sass
+++ b/sass/components/_inc/_faq.sass
@@ -1,19 +1,19 @@
 .faq
-	margin-bottom: $size-triple-unit
+	margin-bottom: sizes(triple)
 	dt
 		font-size: rem(16px)
-		padding: $size-single-unit 0
+		padding: sizes(base) 0
 		margin: 0
 		font-weight: 500
 		border-bottom: 1px solid $color-keyline-light
 		&:hover
 			cursor: pointer
-			color: $color-primary
+			color: colors(brand-primary)
 		&.is-active
-			color: $color-primary
+			color: colors(brand-primary)
 
 	dd
 		display: none
 		font-size: rem(14px)
-		padding: $size-single-unit 0
+		padding: sizes(single) 0
 
