--- a/sass/components/_inc/_list.sass
+++ b/sass/components/_inc/_list.sass
@@ -1,7 +1,7 @@
 .vertical-list
 	+nobullet
 	li
-		padding: $size-single-unit
+		padding: sizes(base)
 		display: flex
 	&.is-bordered
 		> li
@@ -12,7 +12,7 @@
 		height: 30px
 	&.is-thin
 		> li
-			padding: $size-half-unit $size-single-unit
+			padding: sizes(half) sizes(base)
 
 	&.is-bordered
 
