--- a/sass/components/_inc/_masthead.sass
+++ b/sass/components/_inc/_masthead.sass
@@ -15,8 +15,8 @@ html
 		position: center center
 
 	min-height: 400px
-	padding: $size-double-unit 0
-	margin-bottom: $size-double-unit 
+	padding: sizes(double) 0
+	margin-bottom: sizes(double)
 	text-align: center
 	color: white
 	display: table
@@ -31,11 +31,11 @@ html
 		margin-bottom: 0
 
 	p 
-		margin-top: $size-single-unit
+		margin-top: sizes(base)
 
 	.buttons
 		.button:not(:last-child)
-			margin-right: $size-single-unit
+			margin-right: sizes(base)
 
 	input
 		border: 0
