--- a/sass/components/_inc/_subheading.sass
+++ b/sass/components/_inc/_subheading.sass
@@ -1,8 +1,8 @@
 .sub-heading
-	background: $color-background-light
-	padding: $size-single-unit
+	background: colours(greyscale, light)
+	padding: sizes(base)
 	font-size: rem(10px) !important
 	font-weight: 600
 	letter-spacing: 1px
-	color: $color-text-medium
+	color: colours(greyscale, medium)
 	text-transform: uppercase
