--- a/sass/components/_inc/_switch.sass
+++ b/sass/components/_inc/_switch.sass
@@ -5,7 +5,7 @@
 
 	// This is the label
 	span
-		margin-left: $size-single-unit
+		margin-left: sizes(base)
 	
 	// input:empty
 	// 	margin-left: -9999px
@@ -34,7 +34,7 @@
 		+border-radius(100px)
 		display: block
 		content: ""
-		background-color: $color-primary
+		background-color: colours(brand-primary)
 
 	input ~ label:after
 		top: 3px
