--- a/sass/components/_inc/_tabs.sass
+++ b/sass/components/_inc/_tabs.sass
@@ -3,7 +3,7 @@
 		+nobullet
 		border-bottom: 1px solid $color-keyline-light
 		display: flex
-		margin-bottom: $size-single-unit
+		margin-bottom: sizes(base)
 		padding: 5px
 
 	li
