--- a/sass/config/_inc/_typography.sass
+++ b/sass/config/_inc/_typography.sass
@@ -1,4 +1,2 @@
-// $serif / sans-serif ?
-
-$font-family-primary: adelle sans, Helvetica, Arial, sans-serif
+$font-family-primary: Helvetica, Arial, sans-serif
 
