--- a/sass/mixins/mixins.sass
+++ b/sass/mixins/mixins.sass
@@ -9,6 +9,7 @@
 @import "_inc/lists"
 @import "_inc/panel"
 @import "_inc/placeholder"
+@import "_inc/palette"
 @import "_inc/position"
 @import "_inc/rem"
 @import "_inc/respond-to-size"
