--- a/sass/modules/test.sass
+++ b/sass/modules/test.sass
@@ -16,7 +16,7 @@ html
 	width: 100%
 	color: white
 	text-align: center
-	padding: $size-single-unit
+	padding: sizes(base)
 
 .site-footer
 	@extend .border-top
