--- a/sass/components/_inc/_dropdown.sass
+++ b/sass/components/_inc/_dropdown.sass
@@ -10,15 +10,15 @@
 	height: $size-nav-height
 	padding: 0 12px // Need to refactor HTMl
 	&:after
-		+triangle(down, $color-primary, 5px)
-		margin-left: $size-half-unit
+		+triangle(down, colors(brand-primary), 5px)
+		margin-left: sizes(half)
 		margin-top: 3px
 		&:hover
-			color: $color-primary
+			color: colors(brand-primary)
 	&:hover
-		color: $color-primary
+		color: colors(brand-primary)
 		&:after
-			+triangle(down, $color-primary, 5px)
+			+triangle(down, colors(brand-primary), 5px)
 
 .dropdown-menu
 	z-index: 200 // Temp
@@ -30,7 +30,7 @@
 	background: white
 	padding: 0
 	margin: 0
-	border: 1px solid $color-primary
+	border: 1px solid colors(brand-primary)
 
 	// Menu items.
 	> ul
@@ -42,15 +42,15 @@
 			line-height: 1
 			width: 100%
 			&:not(:last-of-type)
-				border-bottom: 1px solid $color-primary
+				border-bottom: 1px solid colors(brand-primary)
 
 			> a
 				display: block
-				padding: $size-single-unit
-				color: $color-primary
+				padding: sizes(single)
+				color: colors(brand-primary)
 				font-size: rem(14px)
 				&:hover
-					color: $color-primary
+					color: colors(brand-primary)
 
 	// Positioning helpers.
 	&.left
