--- a/sass/components/_inc/_form.sass
+++ b/sass/components/_inc/_form.sass
@@ -6,7 +6,7 @@ input[type="submit"]
 	width: 100%
 
 .form-group
-	margin-bottom: $size-single-unit
+	margin-bottom: sizes(base)
 
 $height-form-element: 52px
 
@@ -22,7 +22,7 @@ $height-form-element: 52px
 	input
 		float: left
 		margin-top: rem(8px)
-		margin-right: $size-single-unit
+		margin-right: sizes(base)
 
 form
 	button
@@ -48,27 +48,27 @@ textarea,
 .input
 	-webkit-appearance: none // Need to replace this
 	+box-shadow(inset 0 1px 3px rgba(0, 0, 0, 0.05))
-	+border-radius($border-radius)
+	+border-radius($size-border-radius)
 	+transition()
 
 	+placeholder
 		+transition(color, .25s)
-		color: $color-text-medium
+		color: colors(greyscale, light)
 
 	border: 1px solid $color-keyline-light
 	background: white
 	height: $height-form-element
-	padding: $size-single-unit
+	padding: sizes(base)
 	font-weight: 400
 	font-family: $font-family-primary !important
 	font-size: rem(14px)
 	outline: none
-	color: $color-text-dark
+	color: colors(greyscale, base)
 	text-decoration: none
 	width: 100%
 	&:focus
 		+placeholder
-			color: lighten($color-text-medium, 20%)
+			color: colors(greyscale, light)
 
 textarea
 	height: auto !important
@@ -81,9 +81,9 @@ textarea
 		margin-bottom: 0
 
 	&:focus
-		+box-shadow(0 0 0 3px lighten($color-primary, 52%))
+		// +box-shadow(0 0 0 3px lighten($color-primary, 52%))
 		+placeholder
-			color: $color-text-light
+			color: colors(greyscale, light)
 
 // This is used throughout the platform to display error message below input fields.
 .form-error-message
@@ -95,7 +95,7 @@ textarea
 	width: 100%
 	left: 0
 	z-index: 9999
-	padding: $size-single-unit
+	padding: sizes(base)
 	background: #F2DEDE
 	color: #B94A48
 	text-align: center
@@ -113,7 +113,7 @@ label
 	display: block
 	font-size: rem(18px)
 	font-weight: 500
-	margin-bottom: $size-half-unit
+	margin-bottom: sizes(half)
 
 textarea
 	// min-height: $size-triple-unit * 2
@@ -130,7 +130,7 @@ select
 	cursor: pointer
 	width: 100%
 	&:after
-		+triangle(down, $color-primary, 5px)
+		// +triangle(down, $color-primary, 5px)
 		+transition
 		position: absolute
 		right: 0.9em
@@ -138,7 +138,7 @@ select
 		margin-top: -2px
 	+hover
 		&:after
-			+triangle(down, $color-primary, 5px)
+			// +triangle(down, $color-primary, 5px)
 
 
 
