--- a/sass/components/_inc/_labels.sass
+++ b/sass/components/_inc/_labels.sass
@@ -2,27 +2,27 @@
 	+border-radius(3px)
 
 	font-size: rem(13px)
-	padding: $size-quarter-unit $size-half-unit
-	border: 1px solid $color-text-medium
-	color: $color-text-medium
+	padding: sizes(quarter) sizes(half)
+	border: 1px solid colors(greyscale)
+	color: colors(greyscale)
 
 	&.primary
-		border-color: $color-primary
-		color: $color-primary
+		border-color: colors(brand-primary)
+		color: colors(brand-primary)
 
 	&.secondary
-		border-color: $color-primary
-		color: $color-primary
+		border-color: colors(brand-primary)
+		color: colors(brand-primary)
 
 	&.numeric
-		+border-radius($size-single-unit + $size-quarter-unit)
+		+border-radius(sizes(base) + sizes(quarter))
 
-		// padding: 0 ($size-quarter-unit  + rem(2px))
+		// padding: 0 (sizes(quarter)  + rem(2px))
 		text-align: center
 		font-size: rem(11px)
 		display: inline-block
-		min-width: $size-single-unit + $size-quarter-unit
-		height: $size-single-unit + $size-quarter-unit
-		line-height: $size-single-unit + $size-quarter-unit
+		min-width: sizes(base) + sizes(quarter)
+		height: sizes(base) + sizes(quarter)
+		line-height: sizes(base) + sizes(quarter)
 		border: 0
 		color: white
