--- a/sass/components/_inc/_typeahead.sass
+++ b/sass/components/_inc/_typeahead.sass
@@ -1,144 +1,144 @@
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration
-	display: none
+// input[type="search"]::-webkit-search-decoration,
+// input[type="search"]::-webkit-search-cancel-button,
+// input[type="search"]::-webkit-search-results-button,
+// input[type="search"]::-webkit-search-results-decoration
+// 	display: none
 
 
 
-.search-large
-	+box-shadow(0 1px 3px $drop-shadow)
-	position: fixed
-	width: 100%
-	// top: $nav-height
-	left: 0
-	font-size: rem(24px)
-	z-index: 9999
-	margin-top: -1px
-	+respond-to-size($tablet)
-		top: 0
+// .search-large
+// 	+box-shadow(0 1px 3px $drop-shadow)
+// 	position: fixed
+// 	width: 100%
+// 	// top: $nav-height
+// 	left: 0
+// 	font-size: rem(24px)
+// 	z-index: 9999
+// 	margin-top: -1px
+// 	// +respond-to-size($tablet)
+// 	// 	top: 0
 	
-	.js-search-toggle
-		position: fixed
-		cursor: pointer
-		right: $size-double-unit
-		top: $size-double-unit
-		stroke: $color-primary
-		z-index: 9999
+// 	.js-search-toggle
+// 		position: fixed
+// 		cursor: pointer
+// 		right: $size-double-unit
+// 		top: $size-double-unit
+// 		stroke: $color-primary
+// 		z-index: 9999
 		
-	.area
-		position: relative
-		box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1)
-		display: flex
+// 	.area
+// 		position: relative
+// 		box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1)
+// 		display: flex
 
-	input
-		+border-radius(0)
-		background-image: url(../images/icons/white/icon-search.svg)
-		background-color: $color-background-dark
-		background-repeat: no-repeat
-		border: 0
-		background-position: 33px 21px
-		background-size: 20px 20px 
-		font-size: rem(18px)
-		padding-left: 62px
-		height: 62px
-		color: white
-		+placeholder
-			color: lighten($color-background-dark, 30%)
-		&:focus
-			box-shadow: none
-			color: white !important
-			border-color: $color-keyline-light !important
-
-
+// 	input
+// 		+border-radius(0)
+// 		background-image: url(../images/icons/white/icon-search.svg)
+// 		background-color: $color-background-dark
+// 		background-repeat: no-repeat
+// 		border: 0
+// 		background-position: 33px 21px
+// 		background-size: 20px 20px 
+// 		font-size: rem(18px)
+// 		padding-left: 62px
+// 		height: 62px
+// 		color: white
+// 		+placeholder
+// 			color: lighten($color-background-dark, 30%)
+// 		&:focus
+// 			box-shadow: none
+// 			color: white !important
+// 			border-color: $color-keyline-light !important
 
 
-.search-block
-	input[type="search"]
-		-webkit-appearance: textfield // Need to replace this
-		width: 100%
-		background: white
 
-		font-size: rem(16px)
-		padding: $size-single-unit
-		+border-radius(0)
-		border-bottom: 0 !important
-		padding-left: 48px !important
-		color: $color-text-dark
-		background-image: url(../images/icons/grey/icon-search.svg)
-		background-repeat: no-repeat
-		background-position: 12px
-		border: 0
-		background-size: 24px 24px
 
-.search
-	display: flex
-	position: relative // Anchors search results.
-	button
-		align-self: center
-		width: 60px
-		height: 100% !important
+// .search-block
+// 	input[type="search"]
+// 		-webkit-appearance: textfield // Need to replace this
+// 		width: 100%
+// 		background: white
+
+// 		font-size: rem(16px)
+// 		padding: sizes(base)
+// 		+border-radius(0)
+// 		border-bottom: 0 !important
+// 		padding-left: 48px !important
+// 		color: $color-text-dark
+// 		background-image: url(../images/icons/grey/icon-search.svg)
+// 		background-repeat: no-repeat
+// 		background-position: 12px
+// 		border: 0
+// 		background-size: 24px 24px
+
+// .search
+// 	display: flex
+// 	position: relative // Anchors search results.
+// 	button
+// 		align-self: center
+// 		width: 60px
+// 		height: 100% !important
 		
-		&:hover
-			box-shadow: none !important
+// 		&:hover
+// 			box-shadow: none !important
 
-	// Move this to nav? 
-	input[type="search"]
-		+transition(color, .25s)
-		-webkit-appearance: textfield // Need to replace this
-		width: 100%
-		flex: 3
-		background: white
-		font-size: rem(18px)
+// 	// Move this to nav? 
+// 	input[type="search"]
+// 		+transition(color, .25s)
+// 		-webkit-appearance: textfield // Need to replace this
+// 		width: 100%
+// 		flex: 3
+// 		background: white
+// 		font-size: rem(18px)
 	
-		color: $color-text-dark
-		background:
-			image: url(../images/icons/grey/icon-search.svg)
-			repeat: no-repeat
-			size: rem(20px)
-			position: 30px 22px
+// 		color: $color-text-dark
+// 		background:
+// 			image: url(../images/icons/grey/icon-search.svg)
+// 			repeat: no-repeat
+// 			size: rem(20px)
+// 			position: 30px 22px
 		
-		+respond-to-size($tablet)
-			font-size: rem(14px)
+// 		+respond-to-size($tablet)
+// 			font-size: rem(14px)
 
-		&:hover
-			box-shadow: none
+// 		&:hover
+// 			box-shadow: none
 
-	.search-results
-		+box-shadow($drop-shadow)
-		border: 1px solid $color-keyline-light
-		border-top: 0
-		background: white
-		position: absolute
-		top: 100%
-		left: 0
-		z-index: 9995
-		width: 100%
+// 	.search-results
+// 		+box-shadow($drop-shadow)
+// 		border: 1px solid $color-keyline-light
+// 		border-top: 0
+// 		background: white
+// 		position: absolute
+// 		top: 100%
+// 		left: 0
+// 		z-index: 9995
+// 		width: 100%
 
-		+respond-to-size($tablet)
-			+border-radius(0)
+// 		+respond-to-size($tablet)
+// 			+border-radius(0)
 
-		ul
-			max-height: 200px
-			overflow-y: scroll
-			+nobullet
-			li
-				cursor: pointer
-				padding-left: $size-double-unit
-				height: 62px
-				font-size: 16px
-				line-height: 62px
-				text-align: left
-				&:hover, &.selected
-					background-color: $color-background-light
-					color: $color-primary
-				&:not(:last-child)
-					border-bottom: 1px solid $color-keyline-light
-				&.sub-heading
-					line-height: 1 !important
-					height: auto !important
-					&:hover
-						color: inherit
-						cursor: default
-				> [class^="icon"]
-					margin-right: $size-half-unit
+// 		ul
+// 			max-height: 200px
+// 			overflow-y: scroll
+// 			+nobullet
+// 			li
+// 				cursor: pointer
+// 				padding-left: $size-double-unit
+// 				height: 62px
+// 				font-size: 16px
+// 				line-height: 62px
+// 				text-align: left
+// 				&:hover, &.selected
+// 					background-color: $color-background-light
+// 					color: $color-primary
+// 				&:not(:last-child)
+// 					border-bottom: 1px solid $color-keyline-light
+// 				&.sub-heading
+// 					line-height: 1 !important
+// 					height: auto !important
+// 					&:hover
+// 						color: inherit
+// 						cursor: default
+// 				> [class^="icon"]
+// 					margin-right: sizes(half)
