--- a/sass/mixins/_inc/_background.sass
+++ b/sass/mixins/_inc/_background.sass
@@ -1,4 +1,4 @@
-=background-image($size, $position: null, $repeat: null)
+=background-image($size, $position: center, $repeat: no-repeat)
 	background-size: $size
 	background-position: $position
 	background-repeat: $repeat
