--- a/sass/mixins/_inc/_panel.sass
+++ b/sass/mixins/_inc/_panel.sass
@@ -4,12 +4,12 @@
 // 	overflow: hidden
 
 // 	header
-// 		padding: $size-single-unit
+// 		padding: sizes(base)
 // 		border-bottom: 1px solid $color-keyline-light !important
 // 		h2
 // 			font-size: 16px
 // 			margin-bottom: 0
 // 			font-weight: 600
 // 	main
-// 		padding: $size-single-unit
+// 		padding: sizes(base)
 // 		position: relative
